--- a/pages/banner.html
+++ b/pages/banner.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banner</title>
-    <link rel="stylesheet" href="assets/css/banner.css">
+    <link rel="stylesheet" href="..assets/css/banner.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
