--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Page</title>
-    <link rel="stylesheet" href="..assets/css/blog.css">
+    <link rel="stylesheet" href="../assets/css/blog.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400&display=swap"
         rel="stylesheet">
 </head>
