Fix: correct relative asset paths to ensure proper CSS loading on subpages

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -20,11 +20,11 @@
             </h1>
 
             <div class="blog-author">
-                <img src="assets/images/profile-photo.png" alt="Yazar">
+                <img src="../assets/images/profile-photo.png" alt="Yazar">
                 <span class="author-name">Meltem Faruk • 1 saat önce</span>
             </div>
 
-            <img src="assets/images/pc-image.jpg" class="blog-main-image" alt="Blog Görsel">
+            <img src="../assets/images/pc-image.jpg" class="blog-main-image" alt="Blog Görsel">
 
             <p class="blog-text">MacBook, uzun yıllardır kullanıcılarına şık tasarımı, güçlü performansı ve güvenilir
                 işletim sistemi ile üretkenlikte sınırları zorlama imkanı sunuyor. Gerek taşınabilirliği, gerek yüksek
@@ -48,7 +48,7 @@
             <div class="blog-content">
 
                 <div class="blog-row">
-                    <img src="assets/images/mac-image.png" class="row-image" alt="Mac Studio">
+                    <img src="../assets/images/mac-image.png" class="row-image" alt="Mac Studio">
 
                     <div class="row-text">
                         <h3 class="row-title">Mac Studio ile Yaratıcılığınızı Maksimuma Çıkarın</h3>
@@ -104,7 +104,7 @@
                             kişisel yaşamınızda zamanınızı daha iyi yönetebilirsiniz.</p>
                     </div>
 
-                    <img src="assets/images/apple-watch-image.png" class="row-image" alt="Apple Watch">
+                    <img src="../assets/images/apple-watch-image.png" class="row-image" alt="Apple Watch">
 
                 </div>
 
@@ -116,7 +116,7 @@
             <div class="blog-content">
 
                 <h2 class="video-title">Videoyu izle</h2>
-                <img src="assets/images/video-image.png" class="video-image" alt="Video">
+                <img src="../assets/images/video-image.png" class="video-image" alt="Video">
 
             </div>
         </div>
