--- a/pages/call-to-action.html
+++ b/pages/call-to-action.html
@@ -22,7 +22,7 @@
                 <a href="#" class="cta-button">Başla</a>
             </div>
 
-            <img src="assets/images/call-to-action.png" alt="Call To Action Görseli" class="cta-image">
+            <img src="../assets/images/call-to-action.png" alt="Call To Action Görseli" class="cta-image">
 
         </div>
 
