--- a/pages/hero-restaurant.html
+++ b/pages/hero-restaurant.html
@@ -24,10 +24,10 @@
                 taptaze sebzeler ve nefis mayonezle dolu!
             </p>
 
-            <img src="assets/images/price-button.png" alt="Fiyat" class="hero-price">
+            <img src="../assets/images/price-button.png" alt="Fiyat" class="hero-price">
 
             <div class="hero-delivery">
-                <img src="assets/images/car-icon.png" alt="" class="delivery-icon">
+                <img src="../assets/images/car-icon.png" alt="" class="delivery-icon">
 
                 <div class="delivery-text">
                     <p class="delivery-small">Tahmini teslimat</p>
@@ -37,7 +37,7 @@
 
         </div>
 
-        <img src="assets/images/burger.png" alt="Burger" class="hero-image">
+        <img src="../assets/images/burger.png" alt="Burger" class="hero-image">
 
     </section>
 
