--- a/pages/banner.html
+++ b/pages/banner.html
@@ -23,7 +23,7 @@
                 <a href="#" class="banner-button">Başla</a>
             </div>
 
-            <img src="assets/images/banner-image.png" alt="Ana Görsel" class="banner-image">
+            <img src="../assets/images/banner-image.png" alt="Ana Görsel" class="banner-image">
 
         </div>
     </section>
