--- a/index.html
+++ b/index.html
@@ -3,113 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400&display=swap"
-        rel="stylesheet">
+<title>HTML & CSS Projects</title>
+<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-    <section class="intro">
-        <div class="intro-content">
-            <p class="intro-name">Merhaba, ben Emre Demirel</p>
-            <h1 class="intro-title">
-                Yazılım geliştiriyorum ve modern arayüzler tasarlıyorum.
-            </h1>
-        </div>
-    </section>
+    <h1>My HTML & CSS Projects</h1>
 
-    <section class="projects">
-        <div class="projects-content">
+    <a class="project-link" href="portfolio/index.html">
+        Portfolio Website
+    </a>
 
-            <h2 class="projects-heading">Güncel Projeler</h2>
-
-            <div class="project-card">
-                <img class="project-image" src="assets/images/blog-page.png" alt="Blog Page">
-
-                <h3 class="project-title">Blog Page</h3>
-
-                <p class="project-description">
-                    Modern blog tasarım arayüzü.
-                </p>
-
-                <a href="pages/blog.html" class="project-link">
-                    Çalışmayı incele →
-                </a>
-            </div>
-
-            <div class="project-card">
-                <img class="project-image" src="assets/images/hero.png" alt="Hero Restaurant">
-
-                <h3 class="project-title">Hero Restaurant</h3>
-
-                <p class="project-description">
-                    Restoran temalı hero tasarımı.
-                </p>
-
-                <a href="pages/hero-restaurant.html" class="project-link">
-                    Çalışmayı incele →
-                </a>
-            </div>
-
-            <div class="project-card">
-                <img class="project-image" src="assets/images/banner.png" alt="Banner">
-
-                <h3 class="project-title">Banner</h3>
-
-                <p class="project-description">
-                    Banner tasarımı.
-                </p>
-
-                <a href="pages/banner.html" class="project-link">
-                    Çalışmayı incele →
-                </a>
-            </div>
-
-            <div class="project-card">
-                <img class="project-image" src="assets/images/cta.png" alt="Call To Action">
-
-                <h3 class="project-title">Call To Action</h3>
-
-                <p class="project-description">
-                    Ürün indirme çağrısı tasarımı.
-                </p>
-
-                <a href="pages/call-to-action.html" class="project-link">
-                    Çalışmayı incele →
-                </a>
-            </div>
-
-        </div>
-    </section>
-
-    <section class="contact">
-        <div class="contact-content">
-
-            <div class="contact-text">
-                <h6 class="contact-small">İletişime Geç</h6>
-
-                <h3 class="contact-title">
-                    Bir sonraki projenizde iş birliği yapmak ister misiniz?
-                    Formu doldurabilir veya bana
-                    <a href="mailto:emrealidemirel@gmail.com" class="contact-mail">
-                        emrealidemirel@gmail.com
-                    </a>
-                    adresinden yazabilirsiniz.
-                </h3>
-            </div>
-
-            <div class="contact-empty"></div>
-
-        </div>
-    </section>
-
-    <footer class="footer">
-        <p class="footer-text">© 2026 Emre Demirel</p>
-    </footer>
+    <a class="project-link" href="figma-food/index.html">
+        Figma-Food Website
+    </a>
 
 </body>
-
 </html>
